# TemplateSFML

./: .clang-format  CMakeLists.txt
include/graphics/: FrameRate.hpp  GUI.hpp
include/logic/: Engine.h
source/: main.cpp
source/graphics/: FrameRate.cpp  GUI.cpp
source/logic/: Engine.cpp
